color code on ad-bc proof

--- a/tex/modules/6-G/sections/2.tex
+++ b/tex/modules/6-G/sections/2.tex
@@ -308,9 +308,11 @@ Applying Laplace expansion to a \(2 \times 2\) matrix yields a short formula:
 \[
   \det \begin{bmatrix} a & b \\ c & d \end{bmatrix}
 =
-  a\det \begin{bmatrix} 1 & 0 \\ c & d \end{bmatrix} 
+  a\det \begin{bmatrix} \textcolor{red}{1} & \textcolor{red}{0} \\ 
+    \textcolor{red}{c} & d \end{bmatrix} 
 + 
-  b \det \begin{bmatrix} 0 & 1 \\ c & d \end{bmatrix} 
+  b \det \begin{bmatrix} \textcolor{red}{0} & \textcolor{red}{1} \\ 
+    c & \textcolor{red}{d} \end{bmatrix} 
 = 
   ad-bc
 .\]
