--- a/tex/sample-exercises.tex
+++ b/tex/sample-exercises.tex
@@ -717,7 +717,7 @@ Determine if the matrix \(\begin{bmatrix}1 & 3 & 2  \\ 2 & 4 & 6  \\ 1 & 6 & -1 
 \begin{solution}
 We compute
 \[\RREF\left(\begin{bmatrix}1 & 3 & 2  \\ 2 & 4 & 6  \\ 1 & 6 & -1 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 5 \\ 0 & 1 & -1 \\ 0 & 0 & 0 \end{bmatrix}.\]
-Since this is not the identity matrix, the matrix is not invertible.
+Since its \(\RREF\) is not the identity matrix, the matrix is not invertible.
 \end{solution}
 
 \begin{problem}{M3}
