--- a/tex/modules/6-G/sections/1.tex
+++ b/tex/modules/6-G/sections/1.tex
@@ -2,8 +2,8 @@
 
 \begin{activity}{5}
 The image below illustrates how the linear transformation
-$T_1 : \IR^2 \rightarrow \IR^2$ given by the
-standard matrix $A_1 = \begin{bmatrix} 2 & 0 \\ 0 & 3 \end{bmatrix}$
+$T : \IR^2 \rightarrow \IR^2$ given by the
+standard matrix $A = \begin{bmatrix} 2 & 0 \\ 0 & 3 \end{bmatrix}$
 transforms the unit square.
 
 \begin{center}
@@ -11,8 +11,8 @@ transforms the unit square.
 \fill[red!50!white] (0,0) rectangle (1,1);`
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A_1 \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- node[left] {$A_1 \vec{e}_2 = \begin{bmatrix} 0 \\ 3 \end{bmatrix}$}++(0,3);
+\draw[thick,blue,->] (0,0) -- node[below] {$A \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
+\draw[thick,blue,->] (0,0) -- node[left] {$A \vec{e}_2 = \begin{bmatrix} 0 \\ 3 \end{bmatrix}$}++(0,3);
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (2,3) -- (0,3);
@@ -21,7 +21,7 @@ transforms the unit square.
 \end{center}
 
 \begin{enumerate}[(a)]
-\item What are the lengths of \(A_1\vec e_1\) and \(A_1\vec e_2\)?
+\item What are the lengths of \(A\vec e_1\) and \(A\vec e_2\)?
 \item What is the area of the transformed unit square?
 \end{enumerate}
 
@@ -30,8 +30,8 @@ transforms the unit square.
 
 \begin{activity}{5}
 The image below illustrates how the linear transformation
-$T_2 : \IR^2 \rightarrow \IR^2$ given by the
-standard matrix $A_2 = \begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}$.
+$S : \IR^2 \rightarrow \IR^2$ given by the
+standard matrix $B = \begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}$.
 transforms the unit square.
 
 \begin{center}
@@ -39,8 +39,8 @@ transforms the unit square.
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A_2 \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$A_2 \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -49,21 +49,21 @@ transforms the unit square.
 \end{center}
 
 \begin{enumerate}[(a)]
-\item What are the lengths of \(A_2\vec e_1\) and \(A_2\vec e_2\)?
+\item What are the lengths of \(B\vec e_1\) and \(B\vec e_2\)?
 \item What is the area of the transformed unit square?
 \end{enumerate}
 \end{activity}
 
 \begin{observation}
   It is possible to find two nonparallel vectors that are scaled but not rotated by
-  the linear map given by \(A_2\).
+  the linear map given by \(B\).
 
 \begin{multicols}{2}
-  \[A_2\vec e_1=\begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}\begin{bmatrix}1\\0\end{bmatrix}
+  \[B\vec e_1=\begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}\begin{bmatrix}1\\0\end{bmatrix}
   =\begin{bmatrix}2\\0\end{bmatrix}=2\vec e_1\]
 
   \[
-    A_2\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}
+    B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}
       =
     \begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}
       =
@@ -79,8 +79,8 @@ transforms the unit square.
   \fill[red!50!white] (0,0) -- (1,0) -- (1.75,0.5) -- (0.75,0.5) -- (0,0);
   \draw[thin,gray,<->] (-4,0)-- (4,0);
   \draw[thin,gray,<->] (0,-4)-- (0,4);
-  \draw[thick,blue,->] (0,0) -- node[below] {$A_2\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
-  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$A_2\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
+  \draw[thick,blue,->] (0,0) -- node[below] {$B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
+  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
   \draw[thick,red,->] (0,0) -- (1,0);
   \draw[thick,red,->] (0,0) -- (0.75,0.5);
   \draw[red,dashed] (1,0) -- (1.75,0.5) -- (0.75,0.5);
@@ -97,15 +97,15 @@ transforms the unit square.
   Notice that while a linear map can transform vectors in various ways,
   linear maps always transform parallelograms into parallelograms,
   and these areas are always transformed by the same factor: in the case of
-  \(A_2=\begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}\),
+  \(B=\begin{bmatrix} 2 & 3 \\ 0 & 4 \end{bmatrix}\),
   this factor is \(8\).
 \begin{center}
 \begin{tikzpicture}[scale=0.5]
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A_2 \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$A_2 \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -115,8 +115,8 @@ transforms the unit square.
   \fill[red!50!white] (0,0) -- (1,0) -- (1.75,0.5) -- (0.75,0.5) -- (0,0);
   \draw[thin,gray,<->] (-4,0)-- (4,0);
   \draw[thin,gray,<->] (0,-4)-- (0,4);
-  \draw[thick,blue,->] (0,0) -- node[below] {$A_2\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
-  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$A_2\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
+  \draw[thick,blue,->] (0,0) -- node[below] {$B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
+  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
   \draw[thick,red,->] (0,0) -- (1,0);
   \draw[thick,red,->] (0,0) -- (0.75,0.5);
   \draw[red,dashed] (1,0) -- (1.75,0.5) -- (0.75,0.5);
@@ -130,15 +130,14 @@ begins with area \(1\)).
 
 \begin{remark}
 We will define the \term{determinant} of a square matrix \(A\),
-or \(\det(A)\) for short, to be the factor by which \(A\) scales areas, 
-but we first need to figure out the properties it must satisfy. 
+or \(\det(A)\) for short, to be the factor by which \(A\) scales areas.  In order to figure out how to compute it, we first figure out the properties it must satisfy. 
 \begin{center}
 \begin{tikzpicture}[scale=0.5]
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A_2 \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$A_2 \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -148,8 +147,8 @@ but we first need to figure out the properties it must satisfy.
   \fill[red!50!white] (0,0) -- (1,0) -- (1.75,0.5) -- (0.75,0.5) -- (0,0);
   \draw[thin,gray,<->] (-4,0)-- (4,0);
   \draw[thin,gray,<->] (0,-4)-- (0,4);
-  \draw[thick,blue,->] (0,0) -- node[below] {$A_2\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
-  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$A_2\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
+  \draw[thick,blue,->] (0,0) -- node[below] {$B\begin{bmatrix}1\\0\end{bmatrix}=2\begin{bmatrix}1\\0\end{bmatrix}$}++ (2,0);
+  \draw[thick,blue,->] (0,0) -- ++(3,2) node[above] {$B\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}=4\begin{bmatrix}\frac{3}{4}\\\frac{1}{2}\end{bmatrix}$};
   \draw[thick,red,->] (0,0) -- (1,0);
   \draw[thick,red,->] (0,0) -- (0.75,0.5);
   \draw[red,dashed] (1,0) -- (1.75,0.5) -- (0.75,0.5);
@@ -316,6 +315,11 @@ c\det[\cdots\hspace{0.5em}\vec{v}\hspace{0.5em}\cdots]\), assuming no other colu
 \det[\cdots\hspace{0.5em}\vec{v}\hspace{0.5em}\cdots]+
 \det[\cdots\hspace{0.5em}\vec{w}\hspace{0.5em}\cdots]\), assuming no other columns change.
 \end{enumerate}
+
+\vspace{1em}
+
+Note that these last two properties together can be phrased as ``The determinant is linear in each column.''
+
 \end{definition}
 
 % \begin{activity}{5}
@@ -359,7 +363,7 @@ Consider \(\det([\vec v+c\vec w\hspace{1em}\vec w])\) and
 \end{center}
 
 The base of both parallelograms is $\vec{v}$, while the height has not changed,
-so the determinant does not change either. This can be proven using the
+so the determinant does not change either. This can also be proven using the
 other properties of the determinant:
   \begin{align*}
   \det([\vec{v}+c\vec{w}\hspace{1em}\vec{w}])
@@ -406,16 +410,16 @@ Swapping columns may be thought of as a reflection, which is represented by a ne
 determinant. For example, the following matrices transform the unit square into
 the same parallelogram, but the second matrix reflects its orientation.
 \[
-  A_2=\begin{bmatrix}2&3\\0&4\end{bmatrix}\hspace{2em}
-  B_2=\begin{bmatrix}3&2\\4&0\end{bmatrix}
+  A=\begin{bmatrix}2&3\\0&4\end{bmatrix}\hspace{2em}
+  B=\begin{bmatrix}3&2\\4&0\end{bmatrix}
 \]
 \begin{center}
 \begin{tikzpicture}[scale=0.5]
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$A_2 \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$A_2 \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {$A \vec{e}_1= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$A \vec{e}_2 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -425,8 +429,8 @@ the same parallelogram, but the second matrix reflects its orientation.
 \fill[red!50!white] (0,0) rectangle (1,1);
 \draw[thin,gray,<->] (-4,0)-- (4,0);
 \draw[thin,gray,<->] (0,-4)-- (0,4);
-\draw[thick,blue,->] (0,0) -- node[below] {$B_2 \vec{e}_2= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
-\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B_2 \vec{e}_1 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
+\draw[thick,blue,->] (0,0) -- node[below] {$B \vec{e}_2= \begin{bmatrix}2 \\ 0 \end{bmatrix}$}++ (2,0);
+\draw[thick,blue,->] (0,0) -- ++(3,4) node[above] {$B \vec{e}_1 = \begin{bmatrix} 3 \\ 4 \end{bmatrix}$};
 \draw[thick,red,->] (0,0) -- ++(1,0);
 \draw[thick,red,->] (0,0) -- ++(0,1);
 \draw[blue,dashed] (2,0) -- (5,4) -- (3,4);
@@ -440,8 +444,8 @@ the same parallelogram, but the second matrix reflects its orientation.
 
 
 \begin{fact}
-  We've shown that the column versions of the three row-reducing operations
-  a matrix may be used to simplify a determinant:
+  To summarize, we've shown that the column versions of the three row-reducing operations
+  a matrix may be used to simplify a determinant in the following way:
   \begin{enumerate}[(a)]
   \item Multiplying a column by a scalar multiplies the
         determinant by that scalar:
@@ -464,7 +468,7 @@ the same parallelogram, but the second matrix reflects its orientation.
 \begin{activity}{5}
   The transformation given by the standard matrix \(A\) scales areas by
   \(4\), and the transformation given by the standard matrix \(B\) scales
-  areas by \(3\). How must the transformation given by the standard matrix
+  areas by \(3\). By what factor does the transformation given by the standard matrix
   \(AB\) scale areas?
   \begin{enumerate}[(a)]
   \item \(1\)
