--- a/tex/modules/7-P/index.tex
+++ b/tex/modules/7-P/index.tex
@@ -2,5 +2,7 @@
 
 \stepcounter{SectionCounter}
 \input{modules/7-P/sections/1.tex}
+\input{modules/7-P/sections/2.tex}
+\input{modules/7-P/sections/3.tex}
 
 \end{module}
