--- a/tex/modules/6-G/sections/1.tex
+++ b/tex/modules/6-G/sections/1.tex
@@ -343,7 +343,7 @@ Note that these last two properties together can be phrased as ``The determinant
 
 \begin{observation}
 The determinant must also satisfy other properties.
-Consider \(\det([\vec v+c\vec w\hspace{1em}\vec w])\) and
+Consider \(\det([\vec v \hspace{1em}\vec w+c \vec{v}])\) and
 \(\det([\vec v\hspace{1em}\vec w])\).
 
 \begin{center}
