allow zero to be a (trivial) eigenvector

--- a/tex/modules/6-G/sections/3.tex
+++ b/tex/modules/6-G/sections/3.tex
@@ -69,7 +69,7 @@ It is less obvious (but easily checked once you find it) that
 \begin{definition}
 Let $A \in M_{n,n}$.
 An \term{eigenvector} for \(A\) 
-is a nonzero vector $\vec{x} \in \IR^n$ such that $A\vec{x}$ is parallel to $\vec{x}$.
+is a vector $\vec{x} \in \IR^n$ such that $A\vec{x}$ is parallel to $\vec{x}$.
 
 \begin{center}
 \begin{tikzpicture}[scale=0.75]
