--- a/tex/modules/7-P/sections/3.tex
+++ b/tex/modules/7-P/sections/3.tex
@@ -15,6 +15,13 @@
 
 \begin{applicationActivities}
 
+\begin{activity}{10}
+Consider the truss pictured below with two fixed anchor points and a 10000 N load (assume all triangles are equilateral).
+\drawtruss
+
+Which strut will have the greatest force placed on it?
+\end{activity}
+
 \begin{observation}
 Consider the truss pictured below with two fixed anchor points and a 10000 N load (assume all triangles are equilateral).
 \drawtruss
