--- a/tex/modules/7-P/sections/2.tex
+++ b/tex/modules/7-P/sections/2.tex
@@ -283,7 +283,7 @@ For example, since website $1$ distributes its endorsement equally between $2$ a
 \end{activity}
 
 \begin{activity}{10}
-Find a page rank vector for the transition matrix.
+Find a page rank vector for the given page rank matrix.
 
 \begin{multicols}{2}
 \begin{center}
